update api bill for payment
