# app/Http/Controllers/Api/PaymentController.php
@@ -1,0 +1,85 @@
+<?php
+
+namespace App\Http\Controllers\api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use App\Models\Bill;
+
+class PaymentController extends Controller
+{
+
+    public static $vnp_HashSecret = 'TRFXWUAQIECAYIKJBKTJFRUXIQNEXBBU';
+    public static function checkout($data)
+    {
+        error_reporting(E_ALL & ~E_NOTICE & ~E_DEPRECATED);
+        date_default_timezone_set('Asia/Ho_Chi_Minh');
+        $vnp_Url = "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html";
+        $vnp_Returnurl = "https://lastfire.vercel.app/success"; //return về success ,xong gửi lại cho PHP
+        $vnp_TmnCode = "S9WFX8YL"; //Mã website tại VNPAY
+        $vnp_HashSecret = self::$vnp_HashSecret; //Chuỗi bí mật
+        $vnp_TxnRef = $data['order_id']; //Mã đơn hàng. Trong thực tế Merchant cần insert đơn hàng vào DB và gửi mã này sang VNPAY
+        $vnp_OrderInfo = 'Thanh toán đơn hàng ' . $data['order_id'];
+        $vnp_OrderType = 'billpayment';
+        $vnp_Amount = $data['total']; //total
+        $vnp_Locale =  'vi';
+        $vnp_BankCode = $data['bank_code']; //atm
+        $vnp_IpAddr = $_SERVER['REMOTE_ADDR'];
+        //Add Params of 2.0.1 Version
+        // $vnp_ExpireDate = $_POST['txtexpire'];
+        //Billing
+        $inputData = array(
+            "vnp_Version" => "2.1.0",
+            "vnp_TmnCode" => $vnp_TmnCode,
+            "vnp_Amount" => $vnp_Amount,
+            "vnp_Command" => "pay",
+            "vnp_CreateDate" => date('YmdHis'),
+            "vnp_CurrCode" => "VND",
+            "vnp_IpAddr" => $vnp_IpAddr,
+            "vnp_Locale" => $vnp_Locale,
+            "vnp_OrderInfo" => $vnp_OrderInfo,
+            "vnp_OrderType" => $vnp_OrderType,
+            "vnp_ReturnUrl" => $vnp_Returnurl,
+            "vnp_TxnRef" => $vnp_TxnRef,
+        );
+        if (isset($vnp_BankCode) && $vnp_BankCode != "") {
+            $inputData['vnp_BankCode'] = $vnp_BankCode;
+        }
+        if (isset($vnp_Bill_State) && $vnp_Bill_State != "") {
+            $inputData['vnp_Bill_State'] = $vnp_Bill_State;
+        }
+        //var_dump($inputData);
+        ksort($inputData);
+        $query = "";
+        $i = 0;
+        $hashdata = "";
+        foreach ($inputData as $key => $value) {
+            if ($i == 1) {
+                $hashdata .= '&' . urlencode($key) . "=" . urlencode($value);
+            } else {
+                $hashdata .= urlencode($key) . "=" . urlencode($value);
+                $i = 1;
+            }
+            $query .= urlencode($key) . "=" . urlencode($value) . '&';
+        }
+        $vnp_Url = $vnp_Url . "?" . $query;
+        if (isset($vnp_HashSecret)) {
+            $vnpSecureHash =   hash_hmac('sha512', $hashdata, $vnp_HashSecret); //
+            $vnp_Url .= 'vnp_SecureHash=' . $vnpSecureHash;
+        }
+        $returnData = array(
+            'payment' => 'online', 'code' => '00', 'message' => 'success', 'data' => $vnp_Url
+        );
+        if (isset($data['bank_code'])) {
+            echo json_encode($returnData);
+        }
+    }
+    public function return(Request $request)
+    {
+        // <!-- nếu thành công thì update lại trạng thái đơn hàng đã thanh toán  -->
+        if ($request->vnp_ResponseCode == '00') {
+           Bill::where('id', $request->vnp_TxnRef)->update(['bill_payment_status'=>1]);
+        }
+    }
+}
+// @eu22nJFvNZQgXL
